tests/openmp_vv/5.1/error/test_error_severity_warning.c
#pragma omp parallel
#pragma omp single
#pragma omp error severity(warning)
#pragma omp target map (from: _ompvv_isOffloadingOn)
